@@ -5,6 +5,7 @@ In Progress
 --------
 - Oopserific--dynamic workspace shortcuts were not bound until you
   clicked the Workspaces menu. I fixed that.
+- Improved console pool's ability to detect a dead console.
 
 7 May 12
 --------
